--- a/UVTESTS/t2/pyproject.toml
+++ b/UVTESTS/t2/pyproject.toml
@@ -1,10 +1,7 @@
 [project]
-name = "t1"
+name = "t2"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = [
-    "pytest-playwright>=0.5.2",
-    "textual>=0.81.0",
-]
+dependencies = []
