--- a/UVTESTS/a1/pyproject.toml
+++ b/UVTESTS/a1/pyproject.toml
@@ -1,7 +1,11 @@
 [project]
-name = "t2"
+name = "a1"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "pytest-playwright>=0.5.2",
+    "requests>=2.32.3",
+    "textual>=0.81.0",
+]
